left align stop codes

--- a/css/main.css
+++ b/css/main.css
@@ -164,7 +164,6 @@ div.tour-title {
     font-size: 2em;
     opacity: .3;
     width: 36px;
-    text-align: right;
 }
 
 .title-with-code {
